website search query updated