@@ -17,6 +17,7 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import reride.reride_backend.component.JwtAuthFilter;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class SecurityConfiguration {
@@ -33,8 +34,25 @@ public class SecurityConfiguration {
                 .csrf(csrf -> csrf.disable())
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/user/register", "/user/login","/employee/login","/superAdminRegister", "/uploads/**" , "/vehicle/addVehicle", "/vehicle/website/addVehicle", "/vehicle/website/getVehicles/search", "/vehicle/website/getVehicles", "/testRide/bookTestRide", "vehicle/website/getVehicle/{vehicleId}","/branch/website/getBranches").permitAll()
-                        .requestMatchers("/employee/**").hasAnyRole("SUPER_ADMIN","ADMIN", "STAFF")
+                        // VERY IMPORTANT
+                        .requestMatchers(org.springframework.http.HttpMethod.OPTIONS, "/**").permitAll()
+
+                        // Public APIs
+                        .requestMatchers(
+                                "/user/register",
+                                "/user/login",
+                                "/employee/login",
+                                "/superAdminRegister",
+                                "/uploads/**",
+                                "/vehicle/addVehicle",
+                                "/vehicle/website/addVehicle",
+                                "/vehicle/website/getVehicles/search",
+                                "/vehicle/website/getVehicles",
+                                "/vehicle/website/getVehicle/**",
+                                "/testRide/bookTestRide",
+                                "/branch/website/getBranches"
+                        ).permitAll()
+                        .requestMatchers("/employee/**").hasAnyRole("SUPER_ADMIN", "ADMIN", "STAFF")
                         .anyRequest().authenticated()
                 )
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)) //This means each device/browser manages its own token, so multiple users can log in on different devices simultaneously with no conflict
@@ -56,10 +74,17 @@ public class SecurityConfiguration {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000","myNewDomainInHere" , "http://localhost:5173" , "http://127.0.0.1:5501"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
-        configuration.setAllowCredentials(true); // Important if you're sending cookies or auth headers
+
+        configuration.setAllowedOrigins(List.of(
+                "http://localhost:3000",
+                "http://localhost:5173",
+                "http://127.0.0.1:5501",
+                "http://187.127.128.158"
+        ));
+
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
